--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </video>
     
 </div>
-
+<footer>
+        <p>Project by: Shivam, Darshil, Amey, and Naitik | Class: 8th</p>
+</footer>
   
 
     <script src="script.js"></script>
